Box BackgroundImage - Style changes to stop background scrolling on mobile devices

--- a/Kwc/Box/BackgroundImage/Component.scss
+++ b/Kwc/Box/BackgroundImage/Component.scss
@@ -1,11 +1,12 @@
 .cssClass {
     #background {
-        width: 100%;
-        height: 100%;
+        background-size: cover !important;
         position: fixed;
+        display: block;
+        height: 100%;
         z-index: -1;
-        background-attachment: fixed;
-        background-size: cover;
-        background-position: center 0px;
+        width:100%;
+        left: 0;
+        top: 0;
     }
 }
